Modal alignment issue fixed

--- a/Chef.HRMS.Web/ClientApp/src/app/features/settings/leave/leave-component/leave-component-list/leave-component-list.component.scss
+++ b/Chef.HRMS.Web/ClientApp/src/app/features/settings/leave/leave-component/leave-component-list/leave-component-list.component.scss
@@ -1,8 +1,8 @@
 ::ng-deep  .tablealign{
    .modal-dialog{
-    width: 64% !important;
-    min-width: 64% !important;
-    max-width: 64% !important;
+    width: 62% !important;
+    min-width: 62% !important;
+    max-width: 62% !important;
    }
 
 } 
